Adds auth middleware
